gcp/identity-aware-proxy/internal-apps/global-infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: atomiccommits.io
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
